Tune UI. Resource manager (ability to do i18n later).

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,13 @@
 [versions]
 
-# junit = "4.13.2"
 kotlin = "2.0.20"
+kotlinx-coroutines = "1.9.0"
 npm-uuid = "9.0.1"
 
 [libraries]
 
-# junit = { group = "junit", name = "junit", version.ref = "junit" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
-# kotlin-testJunit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
+kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 
 [plugins]
 
