--- a/app/src/jsMain/resources/manifest.json
+++ b/app/src/jsMain/resources/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "BPE",
     "short_name": "BPE",
-    "start_url": "index.html",
+    "start_url": "./index.html",
     "display": "standalone",
     "background_color": "#000000",
     "theme_color": "#3e2723",
